--- a/src/app/public/acceuil/acceuil.component.html
+++ b/src/app/public/acceuil/acceuil.component.html
@@ -1,1 +1,17 @@
-<p>acceuil works!</p>
+<app-navbar></app-navbar>
+<div>
+  <h1>Bienvenue sur notre programme de formation</h1>
+  <p>
+    Notre programme de formation offre une variété de cours pour améliorer vos
+    compétences et connaissances dans divers domaines.
+  </p>
+
+  <h2>Catégories de formations</h2>
+  <ul>
+    <li>Informatique</li>
+    <li>Gestion</li>
+    <li>Marketing</li>
+    <li>Langues</li>
+    <li>Développement personnel</li>
+  </ul>
+</div>
