--- a/src/app/public/details/details.component.html
+++ b/src/app/public/details/details.component.html
@@ -1,90 +1,38 @@
 <app-navbar></app-navbar>
-<div class="container mt-4" *ngIf="formation">
-  <h2 class="mb-4">{{ formation.titre }}</h2>
-  <p><strong>Description:</strong> {{ formation.description }}</p>
-  <p><strong>Charge Horaire:</strong> {{ formation.chargeHoraire }} heures</p>
-  <p><strong>Niveau de Difficulté:</strong> {{ formation.niveauDifficulte }}</p>
-  <p><strong>Mots Clés:</strong> {{ formation.motsCles.join(", ") }}</p>
-  <p><strong>Catégories:</strong> {{ formation.categories.join(", ") }}</p>
-
-  <h3 class="mt-4">Sessions à venir</h3>
-  <ul class="list-group">
-    <li *ngFor="let session of sessions" class="list-group-item">
-      <p>
-        <strong>Formateur(s):</strong>
-        {{ session.formateurs.join(", ") }}
-      </p>
-      <p><strong>Date de début:</strong> {{ session.dateDebut | date }}</p>
-      <p><strong>Date de fin:</strong> {{ session.dateFin | date }}</p>
-      <button
-        class="btn btn-primary"
-        (click)="openInscriptionModal(session)"
-        [disabled]="session.candidats.length >= 15"
-      >
-        S'inscrire
-      </button>
-    </li>
-  </ul>
-  <button
-    class="btn btn-primary mt-4"
-    (click)="downloadProgramme(formation.programme)"
-  >
-    Télécharger le programme PDF
-  </button>
-</div>
-<!-- Modal for inscription -->
-<div class="modal" tabindex="-1" role="dialog" id="inscriptionModal">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Inscription à la session</h5>
+@if(formation){
+  <div class="container mt-4">
+    <h2 class="mb-4">{{ formation.titre }}</h2>
+    <p><strong>Description:</strong> {{ formation.description }}</p>
+    <p><strong>Charge Horaire:</strong> {{ formation.chargeHoraire }} heures</p>
+    <p><strong>Niveau de Difficulté:</strong> {{ formation.niveauDifficulte }}</p>
+    <p><strong>Mots Clés:</strong> {{ formation.motsCles.join(", ") }}</p>
+    <p><strong>Catégories:</strong> {{ formation.categories.join(", ") }}</p>
+  
+    <h3 class="mt-4">Sessions à venir</h3>
+    <ul class="list-group">
+      @for (session of sessions; track $index) {
+      <li class="list-group-item">
+        <p>
+          <strong>Formateur(s):</strong>
+          {{ session.formateurs.join(", ") }}
+        </p>
+        <p><strong>Date de début:</strong> {{ session.dateDebut | date }}</p>
+        <p><strong>Date de fin:</strong> {{ session.dateFin | date }}</p>
         <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          aria-label="Close"
+          class="btn btn-primary"
+          (click)="openInscriptionModal(session)"
+          [disabled]="session.candidats.length >= 15"
         >
-          <span aria-hidden="true">&times;</span>
+          S'inscrire
         </button>
-      </div>
-      <div class="modal-body">
-        <form (ngSubmit)="inscrire()">
-          <div class="form-group">
-            <label for="nom">Nom</label>
-            <input
-              type="text"
-              class="form-control"
-              id="nom"
-              [(ngModel)]="candidat.nom"
-              name="nom"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <label for="prenom">Prénom</label>
-            <input
-              type="text"
-              class="form-control"
-              id="prenom"
-              [(ngModel)]="candidat.prenom"
-              name="prenom"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input
-              type="email"
-              class="form-control"
-              id="email"
-              [(ngModel)]="candidat.email"
-              name="email"
-              required
-            />
-          </div>
-          <button type="submit" class="btn btn-primary">S'inscrire</button>
-        </form>
-      </div>
-    </div>
+      </li>
+    }
+    </ul>
+    <button
+      class="btn btn-primary mt-4"
+      (click)="downloadProgramme(formation.programme)"
+    >
+      Télécharger le programme PDF
+    </button>
   </div>
-</div>
+}
