--- a/src/app/public/formation-public/formation-public.component.html
+++ b/src/app/public/formation-public/formation-public.component.html
@@ -1,9 +1,9 @@
 <app-navbar></app-navbar>
-<app-rech-formations></app-rech-formations>
+<input type="text" placeholder="Rechercher par titre" [(ngModel)]="searchTerm" class="form-control mb-3">
 <div class="container mt-4">
   <h2 class="mb-4">Liste des formations</h2>
   <ul class="list-group">
-    @for(formation of formations;track $index){
+    @for(formation of FiltredFormations;track $index){
     <li class="list-group-item">
       <h5 class="mb-1">{{ formation.titre }}</h5>
       <p class="mb-1">{{ formation.description }}</p>
@@ -21,3 +21,5 @@
     }
   </ul>
 </div>
+
+
